# spark-fast-lio

./: .gitignore  .gitmodules  .pre-commit-config.yaml
spark_fast_lio/: CMakeLists.txt  package.xml
spark_fast_lio/config/: avia.yaml  hesaiJT128.yaml  horizon.yaml  ouster.yaml  velodyne.yaml  velodyne_mit.yaml
spark_fast_lio/config/dcist_rrg/: rrghusky.yaml
spark_fast_lio/config/kimera_multi/: acl_jackal.yaml  acl_jackal2.yaml  apis.yaml  hathor.yaml  sobek.yaml  sparkal1.yaml  thoth.yaml
spark_fast_lio/include/: preprocess.h  spark_fast_lio.h
spark_fast_lio/rviz/: fastlio.rviz
spark_fast_lio/src/: preprocess.cpp  spark_fast_lio.cpp
spark_fork/: CMakeLists.txt  package.xml
spark_fork/config/: ouster_vbr.yaml
spark_fork/config/kimera_multi/: sparkal2.yaml
spark_fork/include/: imu_processing.hpp  preprocess.h
spark_fork/include/common/: Exp_mat.h  common_lib.h  so3_math.h  use-ikfom.hpp
spark_fork/launch/: README.md  mapping_dcist_rrg.launch.yaml  mapping_kimera_multi.launch.yaml  mapping_mit_campus.launch.yaml  mapping_vbr_colosseo.launch.yaml
spark_fork/launch/dcist/: mapping_hamilton.launch
spark_fork/rviz/: fastlio.rviz  mid360.rviz  ouster_vbr.rviz  velodyne_mit.rviz
spark_fork/rviz/dcist_rrg/: rrghusky.rviz
spark_fork/rviz/kimera_multi/: acl_jackal.rviz  apis.rviz  sparkal1.rviz  sparkal2.rviz  thoth.rviz
spark_fork/src/: spark_fast_lio.cpp
