<?xml version="1.0"?>
<package format="3">
  <name>spark_fast_lio</name>
  <version>0.0.0</version>

  <description>
    This is a modified version of Fast-LIO2 for MIT SPARK
  </description>

  <maintainer email="wdc3iii@caltech.edu">Will Compton</maintainer>

  <license>GPL</license>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
